Fix SQ and Copilot comments